--- a/apis/ejercicio-2/package.json
+++ b/apis/ejercicio-2/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./src/bin/www -e js,ejs"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
